--- a/package.json
+++ b/package.json
@@ -1,30 +1,38 @@
 {
-  "name": "freekenya",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+  "name": "freekenya2",
+  "version": "1.0.0",
+  "description": "This is a [Next.js](https://nextjs.org) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "page.js",
+  "directories": {
+    "lib": "lib"
   },
+  "scripts": {
+    "test": "npm test",
+    "start": "next start",
+    "dev": "next dev",
+    "build": "next build"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/daguri1985/freekenya2.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/daguri1985/freekenya2/issues"
+  },
+  "homepage": "https://github.com/daguri1985/freekenya2#readme",
   "dependencies": {
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.482.0",
-    "mongoose": "^8.12.1",
-    "next": "15.2.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "lucide-react": "^0.487.0",
+    "mongoose": "^8.13.1",
+    "next": "^15.2.4",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.2",
-    "tailwindcss": "^4"
+    "@tailwindcss/postcss": "^4.1.1"
   }
 }
