--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/daguri1985/freekenya2#readme",
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "lucide-react": "^0.487.0",
@@ -30,6 +31,7 @@
     "next": "^15.2.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
