--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "lucide-react": "^0.487.0",
     "mongoose": "^8.13.1",
     "next": "^15.2.4",
+    "next-sanity": "^9.10.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
