--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.487.0",
     "mongoose": "^8.13.1",
     "next": "^15.2.4",
+    "next-auth": "^4.24.11",
     "next-sanity": "^9.10.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
