--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   },
   "homepage": "https://github.com/daguri1985/freekenya2#readme",
   "dependencies": {
+    "@radix-ui/react-tooltip": "^1.2.4",
     "@react-oauth/google": "^0.12.1",
+    "@tippyjs/react": "^4.2.6",
     "axios": "^1.8.4",
     "bcryptjs": "^3.0.2",
     "lucide-react": "^0.487.0",
@@ -35,7 +37,8 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "tailwind": "^4.0.0"
+    "tailwind": "^4.0.0",
+    "tippy.js": "latest"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.1"
