--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "recharts": "^2.15.3",
     "tailwind": "^4.0.0",
     "tippy.js": "latest"
   },
